<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dbot_driver</name>
  <version>0.0.1</version>
  <description>Driver of multiple ODrives for the DBOT robot.</description>
  <maintainer email="deanmacasilhig@gmail.com">dean</maintainer>
  <license>MIT</license>

  <depend>dbot_controller</depend>
  <depend>odrive_controller</depend>
  <depend>odrive</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
